--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "@splinetool/react-spline": "^2.2.6",
-    "@splinetool/runtime": "^0.9.444",
-    "dotenv": "^16.3.1"
+    "@splinetool/runtime": "^0.9.444"
   }
 }
