--- a/jonsvannsveien/package.json
+++ b/jonsvannsveien/package.json
@@ -17,9 +17,11 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^0.9.455",
-    "firebase": "^10.3.1",
+    "bootstrap": "^5.3.2",
+    "firebase": "^10.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
+    "react-dom": "^18.2.0", 
     "react-overlays": "^5.2.1",
     "react-router-dom": "^6.16.0",
     "styled-components": "^6.0.8"
