--- a/jonsvannsveien/package.json
+++ b/jonsvannsveien/package.json
@@ -10,18 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.14.13",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^0.9.455",
     "bootstrap": "^5.3.2",
     "firebase": "^10.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
-    "react-dom": "^18.2.0", 
+    "react-dom": "^18.2.0",
     "react-overlays": "^5.2.1",
     "react-router-dom": "^6.16.0",
     "styled-components": "^6.0.8"
